Working on upload flips endpoint